# slim-detours-sys

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
src/: lib.rs
